--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2620,5 +2620,108 @@ stories:
   state: Kansas
   domain: http://www.kspress.com/
   link: http://kspress.com/news/2019/06/04/media-coalition-files-complaint-about-senate
+images:
+- name: border-fence-border-fence-on-hill-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-spagetti-accident.jpg
+- name: windowmountain-window-mountain-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-ww2-dresden.jpg
+- name: castle-wall-DSC-0067-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-constitution.JPG
+- name: stories-new-oldbarn-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-oldbarn-dark-dali.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
+- name: art-museum-art-museum-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-aqua.jpg
+- name: powerlines-power-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-creativity.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-wols.JPG
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
+- name: oldroad-old-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-electricity.jpg
+- name: birdhouse-birdhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-alien-goggles.jpg
+- name: server-racks-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds.jpg
+- name: sand-hand-sand-hand-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-dali.jpg
+- name: fence-mexico-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
+- name: carry-load-carryload-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purp-paper.jpg
+- name: locked-up-steam-lock-up-steam-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-light-dali.jpg
+- name: old-door-lock-old-door-lock-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
+- name: old-granary-field-oldhouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-bright-sand.jpg
+- name: oldcabin-oldcabin-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-nazi-poster.jpg
+- name: old-church-oldchurch-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
+- name: oldroad-old-road-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-plentiful.jpg
+- name: catacombs-catacombs-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-copper-circuit.jpg
+- name: server-cloud-server-racks-clouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kand-two.jpg
+- name: miamibeach-miamibeach-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-constitution.jpg
+- name: powerlines-power-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-rainbow-festival.jpg
+- name: dragon-desert-desert-dragon-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit-2.jpg
+- name: flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+- name: beach-rocks-beach-rocks-currents-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alien-goggles.jpg
+- name: christianity-christianity-under-construction-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-jap-wav-pr.jpg
+- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+- name: scream-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_4833.jpg
+- name: dragon-desert-desert-dragon-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-really-hot.jpg
+- name: status-berlin-status-berlin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-rainbow-festival.jpg
+- name: mosaic-face-mosaic-face-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-neo-instinct.jpg
+- name: gypsy-wagon-gypsywagon-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-missle.jpg
+- name: power-lines-power-lines-empty-space-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-monet-one.jpg
+- name: capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
+- name: aws-s3-square-ellis-island-nazi-poster-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-ellis-island-nazi-poster-square.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-aqua.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-aqua.JPG
+- name: mosaic-face-mosaic-face-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crabapple.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crabapple.png
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-light-dali.jpg
+- name: oldroad-old-road-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-colored-circuits.jpg
+- name: trucksilo-trucksilo-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-space-pizza.jpg
+- name: adam-smith-adam-smith-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colored-circuits.jpg
+- name: beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
+- name: cargo-ship-cargo-ship-on-sea-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-storm.jpg
+- name: bordercrossing-bordercrossing-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
+- name: mosaic-face-mosaic-face-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-granite.jpg
+- name: beach-rocks-beach-rocks-currents-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-monet-one.jpg
 ---
 New Citizens Celebrate America's Birthday In Annapolis Ceremony.&nbsp;Movie Day At The Library.&nbsp;Hearings Start For Rezoning Application.&nbsp;Explosion Causes Partial Collapse Of Dorm At University.&nbsp;Single Car Accident Sends One To Hospital.&nbsp;Video Of The Week.&nbsp;Grand Marshal Jimmy Alloy.&nbsp;Guilty Pleasures? No Such Thing.&nbsp;
